--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 
 <html>
 
+
+
 <head>
+  
 
 <title>WEB THE BAND</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="../webtheband.CSS">
-<link rel="stylesheet" href="../font/themify-icons/themify-icons.css">
-<link rel="stylesheet" href="../responsive.CSS">
+<link rel="stylesheet" href="./webtheband.CSS">
+<link rel="stylesheet" href="./font/themify-icons/themify-icons.css">
+<link rel="stylesheet" href="./responsive.CSS">
 </head>
 
 <!-- body -->
@@ -59,7 +62,7 @@
 <!-- slider -->
 
 <div class="slider">
-  <div class="text-desc ">
+  <div class="text-desc">
     <h2 class="Chicago center-text ">Chicago</h2>
     <p class="desc center-text">Thank you, Chicago - A night we won't forget</p>
   </div>
@@ -81,17 +84,17 @@
   <div class="product-list col">
     <div class="product col col-third center-text res-product">
       <div class="Name ">Name</div>
-      <img class="camera" src="/img/bandmember.jpg" alt="bandmember">
+      <img class="camera" src="./img/bandmember.jpg" alt="bandmember">
     </div>
 
     <div class="product col col-third center-text res-product">
       <div class="Name ">Name</div>
-      <img class="camera" src="/img/bandmember.jpg" alt="bandmember">
+      <img class="camera" src="./img/bandmember.jpg" alt="bandmember">
     </div>
 
     <div class="product col col-third center-text res-product">
       <div class="Name ">Name</div>
-      <img class="camera" src="/img/bandmember.jpg" alt="bandmember">
+      <img class="camera" src="./img/bandmember.jpg" alt="bandmember">
     </div>
 </div>
 </div>
@@ -112,7 +115,7 @@
   <div class="place-list res-mr-32 res-ml-32">
    
     <div class="tour-place col col-third">
-       <img src="/img/newyork.jpg" alt="" class="place-picture">
+       <img src="./img/newyork.jpg" alt="" class="place-picture">
        <div class="info-place">
          <h3 class="NewYork">New York</h3>
         <p class="day">Fri 27 Nov 2016</p>
@@ -122,7 +125,7 @@
     </div>
     
     <div class="tour-place col col-third">
-      <img src="/img/paris.jpg" alt="" class="place-picture">
+      <img src="./img/paris.jpg" alt="" class="place-picture">
       <div class="info-place">
         <h3 class="NewYork">Paris</h3>
        <p class="day">Fri 28 Nov 2016</p>
@@ -132,7 +135,7 @@
    </div> 
 
    <div class="tour-place col col-third">
-    <img src="/img/sanfran.jpg" alt="" class="place-picture">
+    <img src="./img/sanfran.jpg" alt="" class="place-picture">
     <div class="info-place">
       <h3 class="NewYork">San Francisco</h3>
      <p class="day">Fri 29 Nov 2016</p>
@@ -222,7 +225,7 @@
 
 <!-- footer -->
 <div class="footer">
- <img src="/img/map.jpg" alt="map" class="map">
+ <img src="./img/map.jpg" alt="map" class="map">
  <div class="footer-info center-text">
    <div class="footer-icon mb-12">
      <i class="ti-facebook mr-4"></i>
@@ -298,6 +301,7 @@ for (i=0 ; i<menuItems.length;i++) {
  }
 }
 </script>
+
 
 </body>
 <!-- end body -->
